<resources>
    <string name="app_name">Dicoding Story App</string>
    <string name="login_image">Login Image</string>
    <string name="show_password">Lihat Password</string>
    <string name="signup_image">Signup Image</string>
    <string name="welcome_text">Selamat datang kembali!</string>
    <string name="signup_welcome_text">Ayo mulai cerita barumu!</string>
    <string name="login_title">Masuk</string>
    <string name="description_text">Yuk, lihat cerita seru dari teman-temanmu!</string>
    <string name="signup_description_text">Daftar sekarang dan bagikan kisahmu!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_prompt">Belum punya akun? <b>Daftar sekarang!</b></string>
    <string name="register_title">Daftar Akun</string>
    <string name="name">Nama</string>
    <string name="register">Daftar</string>
    <string name="login_prompt">Sudah punya akun? <b>Masuk!</b></string>
    <string name="story_list">Daftar Cerita</string>
    <string name="story_image">Gambar Cerita</string>
    <string name="story_image_desc">Deskripsi Gambar</string>
    <string name="story_name">Nama Cerita</string>
    <string name="story_description">Deskripsi Cerita</string>
    <string name="story_date">Tanggal Dibuat</string>
    <string name="error_password_too_short">Password Terlalu Pendek</string>
    <string name="error_email_invalid">Email Tidak Valid</string>
    <string name="error_name_empty">Nama Tidak Boleh Kosong</string>
    <string name="error_email_empty">Email Tidak Boleh Kosong</string>
    <string name="error_password_empty">Password Tidak Boleh Kosong</string>
    <string name="error_login_failed">Login Gagal</string>
    <string name="preview_image">Lihat Gambar</string>
    <string name="add_photo">Tambahkan Foto</string>
    <string name="description">Deskripsi</string>
    <string name="upload_story">Unggah Cerita</string>
    <string name="story_uploaded">Cerita Diunggah</string>
    <string name="logout">Keluar</string>
    <string name="logout_confirmation">Apakah Anda yakin ingin keluar?</string>
    <string name="logout_success">Keluar Berhasil</string>
    <string name="logout_failed">Keluar Gagal</string>
    <string name="story_detail">Detail Cerita</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="add_story_title">Tambah Cerita</string>
    <string name="story_detail_title">Detail Cerita</string>
    <string name="home_title">Dicoding Story App</string>
    <string name="photo_description">Deskripsi Foto</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_style">Map Style</string>
    <string name="coquette">Coquette</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="maps">Maps</string>"
    <string name="style">Gaya Maps</string>
    <string name="retry">Ulangi</string>

</resources>
